--- a/src/app/main-content/skill-set/skills-mobile.component.scss
+++ b/src/app/main-content/skill-set/skills-mobile.component.scss
@@ -229,9 +229,9 @@ $paddingRightText1200: 80px;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 200px;
-  height: 58px;
-  font-size: 23px;
+  width: 158px;
+  height: 49px;
+  font-size: 16px;
   border-radius: 10px;
   background: $color-primary-wcag;
   color: $color-text_primary;
